<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.artonano.kkn.activity.MainActivity" >
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_checkAll"
        android:orderInCategory="100"
        android:title="@string/action_checkall"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unCheckAll"
        android:orderInCategory="100"
        android:title="@string/action_uncheckall"
        app:showAsAction="never"/>
</menu>
