<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_min">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:orientation="vertical">
        <com.adfin.numobile.widget.CanaroTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_dialog_video"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAllCaps="false"
            android:textSize="@dimen/item_text_size"
            android:textColor="#0e0e0e" />
        <com.adfin.numobile.widget.CanaroTextViewLight
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_dialog_video_description"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAllCaps="false"
            android:textSize="@dimen/item_text_size_small"
            android:textColor="#0e0e0e" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".5"
            android:layout_margin="@dimen/component_button"
            android:background="@drawable/selector_button"
            android:id="@+id/buttonBrowse"
            android:text="@string/button_browse"
            android:layout_gravity="center"
            android:textSize="@dimen/component_button_small"
            android:layout_marginTop="@dimen/component_marging_top"
            android:textColor="#fff"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".5"
            android:layout_margin="@dimen/component_button"
            android:background="@drawable/selector_button_two"
            android:id="@+id/buttonCapture"
            android:text="@string/button_capture"
            android:layout_gravity="center"
            android:textSize="@dimen/component_button_small"
            android:layout_marginTop="@dimen/component_marging_top"
            android:textColor="#fff"
            android:layout_marginBottom="15dp" />
    </LinearLayout>

</LinearLayout>