<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/content_form_anggota1"
    tools:context="com.adfin.numobile.activity.FormAnggota1Activity">

    <LinearLayout
        android:layout_marginTop="@dimen/component_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="DATA PRIBADI"
                android:textSize="20dp"
                android:textColor="#2a2735"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsername"
                android:singleLine="true"
                android:textSize="@dimen/component_text"
                android:hint="@string/username"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" >
                <requestFocus />
            </EditText>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNamaLengkap"
                android:singleLine="true"
                android:textSize="@dimen/component_text"
                android:hint="@string/nama"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" >
            </EditText>

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNoKtp"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/ktp"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etTempatLahir"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/tempat"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDate"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/ttl"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <Spinner
                android:id="@+id/spJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/kategori_array"
                android:background="@drawable/shape_oval"
                android:dropDownSelector="@drawable/selector_menu"
                android:prompt="@string/hint_kategori" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <Spinner
                android:id="@+id/spStatusPerkawinan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/shape_oval"
                android:dropDownSelector="@drawable/selector_menu"
                android:entries="@array/status_array"
                android:prompt="@string/hint_status" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/etAlamat"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/alamat"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <Spinner
                android:id="@+id/spProvinsi"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:prompt="@string/provinsi"
                android:background="@drawable/shape_oval"
                android:dropDownSelector="@drawable/selector_menu"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <Spinner
                android:id="@+id/spKabupaten"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/shape_oval"
                android:dropDownSelector="@drawable/selector_menu"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <Spinner
                android:id="@+id/spKecamatan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/shape_oval"
                android:dropDownSelector="@drawable/selector_menu"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <Spinner
                android:id="@+id/spDesa"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/shape_oval"
                android:dropDownSelector="@drawable/selector_menu"
                />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etKodePos"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/pos"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etTelepon"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/tlpn"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etHandphone"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/hp"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/email"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etFacebook"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/fb"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etTwitter"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/tw"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etInstagram"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/ig"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/component_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etPathh"
                android:singleLine="false"
                android:textSize="@dimen/component_text"
                android:hint="@string/path"
                android:background="@drawable/shape_oval"
                android:textColorHint="@color/colorEditTextSecondary"
                android:textColor="@color/colorEditTextPrimary"
                android:textAlignment="center" />

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#329049"
            android:id="@+id/btnNext1"
            android:text="@string/btn_next"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/component_button"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

    </LinearLayout>
</ScrollView>
